force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>TLL_Activity_Name__c</fullName>
    <description>Lilly field for Contracted Engagement(ToDo).</description>
    <label>Activity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>