force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>TLL_Activity_Owner__c</fullName>
    <description>Lilly Contracted Engagements (TO-DO)</description>
    <label>Activity Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>