force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Associated_Congress__c.field-meta.xml
<CustomField>
    <fullName>TLL_Associated_Congress__c</fullName>
    <description>Lilly Contracted Engagements (TO-DO)</description>
    <label>Associated Congress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>(AAAAI) American Academy of Allergy Asthma and Immunology</fullName>
            </value>
            <value>
                <fullName>(AACE) American Association of Clinical Endocrinologists</fullName>
            </value>
            <value>
                <fullName>(AACR) American Association of Cancer Research</fullName>
            </value>
            <value>
                <fullName>(AAD) American Academy of Dermatology</fullName>
            </value>
            <value>
                <fullName>(AADE) American Association of Diabetes Educators</fullName>
            </value>
            <value>
                <fullName>(AAN) American Academy of Neurology</fullName>
            </value>
            <value>
                <fullName>(AANP) American Association of Nurse Practitioners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>