force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Forecasted_US_Contracted_HCPs__c.field-meta.xml
<CustomField>
    <fullName>TLL_Forecasted_US_Contracted_HCPs__c</fullName>
    <description>Lilly Contracted Engagements (TO-DO)</description>
    <label>Forecasted # US Contracted HCPs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>