force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Functional_Owner__c.field-meta.xml
<CustomField>
    <fullName>TLL_Functional_Owner__c</fullName>
    <description>Lilly Contracted Engagements (TO-DO)</description>
    <label>Functional Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Development</fullName>
            </value>
            <value>
                <fullName>Corporate Affairs</fullName>
            </value>
            <value>
                <fullName>Early Phase</fullName>
            </value>
            <value>
                <fullName>GPORWE</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>PRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>