force-app/main/default/objects/OCE__ToDo__c/fields/TLL_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>TLL_Meeting_Type__c</fullName>
    <description>Lilly Contracted Engagements (TO-DO)</description>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>