force-app/main/default/objects/OCE__ToDo__c/validationRules/CA_Status_Not_Executed.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Status_Not_Executed</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(OCE__AccountTactic__r.OCE__Status__c , &apos;Completed&apos;)) &amp;&amp; $Profile.Name = &apos;TLEE&apos;</errorConditionFormula>
    <errorMessage>TL cannot be changed when Contracted Activity status is Completed</errorMessage>
</ValidationRule>