force-app/main/default/objects/OCE__ToDo__c/validationRules/OCE__AccountMatchAccountPlanAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__AccountMatchAccountPlanAccount</fullName>
    <active>false</active>
    <description>Account should match current Account Objective&apos;s Account Plan&apos;s Account.</description>
    <errorConditionFormula>OCE__Account__c != OCE__AccountObjective__r.OCE__AccountPlan__r.OCE__Account__r.Id</errorConditionFormula>
    <errorDisplayField>OCE__Account__c</errorDisplayField>
    <errorMessage>Account should match current Account Objective&apos;s Account Plan&apos;s Account.</errorMessage>
</ValidationRule>