force-app/main/default/objects/OCE__ToDo__c/validationRules/OCE__Pending_Or_Approved_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Pending_Or_Approved_Change_Not_Allowed</fullName>
    <active>false</active>
    <description>If Account Objective Approved Status is Pending or Approved - ToDo cannot be changed</description>
    <errorConditionFormula>AND(NOT(ISNEW()), OR(ISPICKVAL(OCE__AccountTactic__r.OCE__AccountObjective__r.OCE__ApproverStatus__c, &apos;Pending Approval&apos;),ISPICKVAL(OCE__AccountTactic__r.OCE__AccountObjective__r.OCE__ApproverStatus__c, &apos;Approved&apos;)))</errorConditionFormula>
    <errorMessage>ToDo cannot be changed when Account Objective Approved Status is Pending or Approved</errorMessage>
</ValidationRule>