force-app/main/default/objects/OCE__ToDo__c/validationRules/OCE__TacticIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__TacticIsNotBlank</fullName>
    <active>false</active>
    <description>Tactic field cannot be blank.</description>
    <errorConditionFormula>ISBLANK(OCE__Tactic__c)</errorConditionFormula>
    <errorDisplayField>OCE__Tactic__c</errorDisplayField>
    <errorMessage>Tactic field cannot be blank.</errorMessage>
</ValidationRule>